--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="content">
         <section class="top_section">
           <div class="image_container">
-            <img src="https://ibb.co/P51tYS1" alt="tribute" />
+            <img src="https://images.herzindagi.info/image/2024/Jul/abdul-kalam-death-anniversary.jpg" alt="tribute" />
           </div>
           <div>
             <h1>A . P . J Abdul Kalam</h1>
