--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="content">
             <section class="top_section">
                 <div class="image_container">
-                    <img src="https://images.herzindagi.info/image/2024/Jul/abdul-kalam-death-anniversary.jpg" alt="tribute" />
+                    <img src="https://i.ibb.co/GVCFJhC/DALL-E-2024-10-18-10-39-39-A-detailed-portrait-of-Dr-A-P-J-Abdul-Kalam-former-President-of-India-in.webp" alt="DALL-E-2024-10-18-10-39-39-A-detailed-portrait-of-Dr-A-P-J-Abdul-Kalam-former-President-of-India-in-" border="0">
                 </div>
                 <div>
                     <h1>A . P . J Abdul Kalam</h1>
